styles/common.less
/**
 * @file styles/common.less
 *
 * Copyright (c) 2003-2012 John Willinsky
 * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
 * 
 * @brief Styles for common templates.
 *
 */

div.separator {
	height: 20px;
} 

.ui-tabs .ui-tabs-panel {
	padding: 1em 1.2em;
}

.ui-accordion .ui-accordion-content {
	padding: 1em 2.5em;
}

.pkp_common_reviewRoundStatusContainer {
	height: 40px;
	margin: 11px;
	border: 2px solid black;
	background-color: #FFFFDD;
}

.pkp_common_submissionHeaderHeading {
	font-size: 1.7em;
	color: #20538D;
	vertical-align: middle;
	float: left;
}
a.pkp_common_disabled,
a.pkp_common_disabled:hover {
	color: #666;
}

.button.ui-state-default,
.ui-button {
	background: #0C3B66 url(../templates/images/button_bg_slice.png) repeat-x !important;
	/**
	 * !important elements needed in the event CSS application order
	 * vis-a-vis jQueryUI is reversed (see editor decision actions in the
	 * review interface in OMP)
	 */
	color: white !important;
	border-style: none !important;
	border-color: white !important;
	border-width: 0 0 0 0 !important;
	font-weight: normal !important;
	font-family: Arial,Helvetica,sans-serif !important;
	font-size: 12px !important;
}

.button.ui-state-hover,
.ui-button.ui-state-hover, 
.button.ui-state-active,
.ui-button.ui-state-active {
	background: #0C3B66 url(../templates/images/button_bg_slice_hover.png) repeat-x !important;
	/**
	 * !important elements needed in the event CSS application order
	 * vis-a-vis jQueryUI is reversed (see editor decision actions in the
	 * review interface in OMP)
	 */
	color: white !important;
	border-style: none !important;
	border-color: white !important;
	border-width: 0 0 0 0 !important;
}

#pressSwitcher .section {
	width:200px;
}

div.linkToEditPage {
	margin-top: -25px;
}

div.noteWrapper {
	margin-bottom: 10px;
	padding-bottom: 10px;
}

span.noteFile {
	margin-top:10px;
}

/**
 * IE7 css general hacks
 */
 
/* Menu */
ul.sf-menu {
	position:relative;
	z-index:1000;
}

/* Tabs */
.ui-tabs .ui-tabs-nav li {
	margin-bottom: 0px !important;
}

/* Press switcher */
#pressSwitcherSelect {
	vertical-align: middle;
	margin-bottom: 0px;
}

